--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "latest",
+    "react-scripts": "^2.1.3",
     "upgrade": "^1.1.0",
     "web-vitals": "^1.1.2"
   },
